# 3DGS-opengl

./: CMakeLists.txt  CMakeSettings.json  README.md  vcpkg.json
include/: CVT.hpp  CVT_update_cpp.hpp  GUI.h  GUI2D.hpp  KNN_cuda.cuh  KNN_nanoflann.hpp  Utilities.h  shaders.h  shaders_CVT.h  shaders_GRAD.h  shaders_SDF.h  shaders_cam.h  shaders_pointCloud.h  shaders_poly.h  tiny_obj_loader.h
lib/quick_imgui/: CMakeLists.txt
lib/quick_imgui/src/: ImGuiWrapper.cpp
resources/shaders/: computeBoundingBoxes.cp  point.fs  point.vs  predict_colors.cp  predict_colors_for_all.cp  quad.fs  quad.vs  quadNeuS.fs  quadNeuS.vs  quad_interlock.fs  quad_interlock.vs  quad_interlock_bwd.fs  quad_interlock_bwd.vs  testVisibility.cp  triangleMesh.fs  triangleMesh.vs
resources/shaders/common/: CommonTypes.h  Covariance.h  GLSLDefines.h  Uniforms.h
shaders/: 3DGS_frag.glsl  3DGS_geo.glsl  3DGS_vertex.glsl  CVTsplat.frag  CVTsplat.geo  CVTsplat.vert  CVTupdate.glsl  Flatten.glsl  MergeCentroids.glsl  Normalise.glsl  SimpleVertexShader.glsl
src/: Backward.cu  Backward.cuh  CVTupdate.cu  CVTupdate.cuh  DataLoader.cpp  DataLoader.h  GaussianCloud.cpp  GaussianCloud.h  KNN_cuda.cu  KNN_faiss.hpp  PointCloudLoader.cpp  PointCloudLoader.h  RgbdLoadCuda.cu  RgbdLoadCuda.cuh  Sort.cu  Sort.cuh  Window.cu  Window.cuh  adam_cuda.cu  adam_cuda.cuh  main.cpp
src/RenderingBase/: AsyncWorkers.cpp  AsyncWorkers.h  Camera.cpp  Camera.h  CudaBuffer.cu  CudaBuffer.cuh  CudaCommon.cuh  CudaGLInterop.cpp  CudaGLInterop.h  CudaIntrospection.cu  CudaIntrospection.cuh  CudaTimer.cu  CudaTimer.cuh  FBO.cpp  FBO.h  GLBuffer.cpp  GLBuffer.h  GLIntrospection.cpp  GLIntrospection.h  GLShaderLoader.cpp  GLShaderLoader.h  GLTimer.h  MeshLoader.cpp  MeshLoader.h  Shader.cpp  Shader.h  SharedContext.cpp  SharedContext.h  Texture2D.cpp  Texture2D.h  ThreadSafeQueue.h  VAO.cpp  VAO.h  helper_cuda.h
src/glad/: egl.c  egl.h  gl.c  gl.h
src/imgui/: ImGuiFileDialog.cpp  ImGuiFileDialog.h  main.cpp
src/knn_cu/: lbvh.cuh  lbvh_kernels.cu  morton_code.cuh  query.cuh  query_knn_kernels.cu
src/stb/: stb_image.h
